<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.tablayoutenter.signup.SignUpFragment"
    android:layout_marginHorizontal="16dp"
    >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEnter"
        style="@style/Base.TextBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/enter" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEnter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/photo" />

    <TextView
        android:id="@+id/tvAddPhoto"
        style="@style/Base.TextViolet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginTop="16dp"
        android:text="@string/addPhoto" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etUser"
        style="@style/Base.TextGray"
        android:layout_below="@id/tvAddPhoto"
        android:background="@drawable/edittext"
        android:padding="10dp"
        android:text="@string/username" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etNickName"
        style="@style/Base.TextGray"
        android:layout_below="@+id/etUser"
        android:background="@drawable/edittext"
        android:padding="10dp"
        android:text="@string/nickname" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etUserName"
        style="@style/Base.TextGray"
        android:layout_below="@+id/etNickName"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext"
        android:padding="10dp"
        android:text="@string/password"
        android:inputType="textPassword"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPassword"
        style="@style/Base.TextGray"
        android:layout_below="@+id/etUserName"
        android:background="@drawable/edittext"
        android:padding="10dp"
        android:text="@string/confirm_password"
        android:inputType="textPassword"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEnter"
        style="@style/Violet.Button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="68dp"
        android:padding="16dp"
        android:text="@string/sign_up" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHaveAccount"
        style="@style/Base.BottomTextView"
        android:text="@string/haveAccount"
        android:textSize="13sp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEnt"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/selectableItemBackground"
        android:text="войти"
        style="@style/Base.BottomButton"
        />

</RelativeLayout>